[package]
name = "rmirrors"
version = "0.1.0"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
edition = "2018"
description = "Generates an up-to-date list of currently active mirrors, ranked by speed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = "2"
chrono = "0.4"

[release.profile]
lto = "fat"
codegen-units = 1
